build html layout

--- a/index.html
+++ b/index.html
@@ -19,6 +19,45 @@
     <title>Frontend Mentor | Huddle landing page</title>
   </head>
   <body>
+    <header>
+      <img src="./images/logo.svg" alt="Huddle logo" class="logo" />
+    </header>
+    <main role="main">
+      <div class="container">
+        <img
+          src="./images/illustration-mockups.svg"
+          alt="a preview of the Huddle service"
+          class="screenshot"
+        />
+        <h1>Build The Community Your Fans Will Love</h1>
+        <p>
+          Huddle re-imagines the way we build communities. You have a voice, but
+          so does your audience. Create connections with your users as you
+          engage in genuine discussion.
+        </p>
+        <a href="#" class="btn">Register</a>
+        <div class="social-links">
+          <a href="#" class="social-link"
+            ><img
+              src="./images/facebook-app-symbol.png"
+              alt="link to facebook"
+              class="social-icon"
+          /></a>
+          <a href="#" class="social-link"
+            ><img
+              src="./images/twitter.png"
+              alt="link to twitter"
+              class="social-icon"
+          /></a>
+          <a href="#" class="social-link"
+            ><img
+              src="./images/instagram.png"
+              alt="link to instagram"
+              class="social-icon"
+          /></a>
+        </div>
+      </div>
+    </main>
     <footer>
       <p class="attribution">
         Challenge by
