--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           class="screenshot"
         />
         <h1>Build The Community Your Fans Will Love</h1>
-        <p>
+        <p class="body-text">
           Huddle re-imagines the way we build communities. You have a voice, but
           so does your audience. Create connections with your users as you
           engage in genuine discussion.
