--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             but so does your audience. Create connections with your users as you
             engage in genuine discussion.
           </p>
-          <a href="#" class="btn">Register</a>
+          <a href="" class="btn">Register</a>
         </div>
       </div>
       <div class="social-links">
-        <a href="#" class="social-link"
+        <a href="" class="social-link"
           ><svg
             version="1.1"
             xmlns="http://www.w3.org/2000/svg"
@@ -56,7 +56,7 @@
             ></path>
           </svg>
         </a>
-        <a href="#" class="social-link"
+        <a href="" class="social-link"
           ><svg
             version="1.1"
             xmlns="http://www.w3.org/2000/svg"
@@ -71,7 +71,7 @@
             ></path>
           </svg>
         </a>
-        <a href="#" class="social-link"
+        <a href="" class="social-link"
           ><svg
             version="1.1"
             xmlns="http://www.w3.org/2000/svg"
